remove: unit tests and clean up struct tags
