# controller/health-check/check.go
@@ -12,12 +12,12 @@ import (
 //
 // @Summary      Health Check
 // @Description  Check application health status
-// @Tags         Health Check
+// @Tags         1. Health Check
 // @Accept       json
 // @Produce      json
-// @Success      200 {object} map[string]interface{} "Application is healthy"
-// @Failure      500 {object} map[string]interface{} "Internal server error"
-// @Router       /health-check [get]
+// @Success      200 {object} map[string]interface{} "{"data": null, "message": "successfully checked"}"
+// @Failure      500 {object} map[string]interface{} "{"data": null, "message": "internal server error"}"
+// @Router       /health [get]
 func (c *controller) Check(ctx *gin.Context) {
 	if err := c.healthService.Check(); err != nil {
 		response.Error(ctx, http.StatusInternalServerError, err.Error())
